2000-06-04  Radek Doulik  <rodo@helixcode.com>

	* htmlengine-edit-insert.c (html_engine_insert): use magic links
	when inserting ' ' or '\n'

	* htmltextmaster.c (html_text_master_magic_link): new function for
	magical text to link morphing (uses paste)

2000-06-02  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlclueflow.c (save): Don't print a newline at the end when
	style is HTML_CLUEFLOW_STYLE_PRE because that causes <pre> to
	duplicate newlines.

2000-06-02  Larry Ewing  <lewing@helixcode.com>

	* htmlengine.c (html_engine_update_event): remove debugging printf
	for release.

	* htmlengine-edit-delete.c (html_engine_delete): add cast to
	silence warning.
	
2000-06-02  Dan Winship  <danw@helixcode.com>

	* htmlembedded.c (html_embedded_size_recalc): replace a variable
	initialization that got lost yesterday.

2000-06-01  Larry Ewing  <lewing@helixcode.com>

	* htmlclue.c (destroy): rework that last commit to do things
	slightly differently, html_clue_remove had unintended side
	effects.

2000-06-01  Larry Ewing  <lewing@helixcode.com>

	* htmlclue.c (destroy): remove the objects before we destroy them
	to make sure the clue is in a sane state.

2000-06-01  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine-edit-delete.c (html_engine_delete): Save the parent
	of the start object so that we don't segfault when the object gets
	unparented.

2000-06-01  Christopher James Lahey  <clahey@helixcode.com>

	* htmlengine.c (html_engine_destroy): Check that engine->clue
	isn't NULL so that we don't crash.

2000-06-01  Larry Ewing  <lewing@helixcode.com>

	* htmlengine-edit-delete.c (html_engine_delete): queue a redraw
	when we text_len == 0 since we have now lost all text slaves and
	they cannot queue a redraw in the area they have exposed (FIXME).

2000-06-01  Ettore Perazzoli  <ettore@helixcode.com>

	* htmltype.c: #include "htmliframe.h".

	* htmlengine.c (parse_object): Added missing `HTML_OBJECT()' cast.
